# url-shortener-web

./: .env  .gitignore  .prettierrc  README.md  cypress.config.ts  eslint.config.mjs  gulpfile.js  jest.config.mjs  jest.config.ts  next.config.js  next.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json  typed-scss-modules.config.ts  webpack.config.js
.github/workflows/: build.yml  tests.yml
app/: config.py  main.py  views.py
app/static/css/: app.min.css  login.min.css  signup.min.css
app/static/js/: signin.min.js  signup.min.js
app/templates/: app.html  login.html  macros.html  signup.html
app/views/: content.py  pages.py  types_.py
cypress/support/: component-index.html
frontend/scss/abstracts/: _box-shadows.scss  _breakpoints.scss  _fonts.scss  _index.scss  _mixins.scss
frontend/scss/base/: _base.scss  _reset.scss
frontend/scss/components/brand/: _brand.scss  brand.html
frontend/scss/components/button/: _button.scss  button.html
frontend/scss/components/checkbox/: _checkbox.scss  checkbox.html
frontend/scss/components/input/: _input.scss  input.html
frontend/scss/components/link/: _link.scss  link.html
frontend/scss/components/loader/: _loader.scss
frontend/scss/layout/dialog-form/: _dialog-form.scss  dialog-form.html
frontend/scss/layout/navbar/: _navbar.scss  navbar.html
frontend/scss/layout/topbar/: _topbar.scss  topbar.html
frontend/scss/pages/: app.scss  login.scss  signup.scss
frontend/ts/: auth.ts  schemes.ts  signin.ts  signup.ts
src/: constant.ts  constants.ts
src/app/: layout.tsx  not-found.tsx  robots.tsx  sitemap.tsx
src/app/(auth)/: layout.tsx
src/app/(auth)/login/: layout.tsx  page.tsx  validation.test.ts  validation.ts
src/app/(auth)/signup/: page.tsx  (+3 more)
src/app/signup/: layout.tsx  page.tsx  validation.ts
src/components/Brand/: Brand.module.scss.d.ts  Brand.tsx
src/components/Button/: Button.module.scss  Button.module.scss.d.ts  Button.tsx
src/components/Layout/: Layout.module.scss  Layout.module.scss.d.ts  Layout.tsx
src/components/Main/: Main.module.scss  Main.tsx
src/components/Navbar/: Navbar.module.scss.d.ts  Navbar.tsx
src/components/form/: index.ts
src/components/layout/: index.ts
src/components/navigation/: index.ts
src/components/style/: _colors.scss  breakpoints.ts
src/components/styles/: breakpoints.ts
src/components/typography/: index.ts
src/components/visual/: index.ts
src/hooks/: useFetch.ts
src/styles/: global.css  global.scss
src/styles/abstracts/: _colors.scss  _fonts.scss  _index.scss  _mixins.scss
src/styles/base/: _base.scss
src/styles/pages/: login.scss  signup.scss
src/types/: index.ts  interfaces.ts
src/types/interfaces/: index.ts  responses.ts  user.ts
src/utils/: errors.test.ts  errors.ts  index.ts  messages.ts  string.ts
(+183 files in other folders)
